--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-typescript-validator",
+  "name": "json-typescript-decoder",
   "version": "0.1.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
